# brando

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  architecture_design.md  implementation_plan.md  pyproject.toml  task.md
.github/workflows/: changelog.yml
brando/: __init__.py  checker.py  cli.py  database.py  esoteric.py  generator.py  reporter.py  scorer.py
docs/: PRD.md  api_reference.md  architecture_design.md  troubleshooting_and_faq.md
docs/tutorials/: linguistic_visual_branding.md  numerology_astrology_alignment.md  startup_domain_funnel.md
scripts/: generate_changelog.py
tests/: test_checker.py  test_cli.py  test_database.py  test_esoteric.py  test_generator.py  test_reporter.py  test_scorer.py
tests/cli_level_scenarios/: test_startup_domain_funnel.py
tests/module_level_scenarios/: test_linguistic_visual_brand.py  test_numerology_astrology_brand.py
